[package]
name = "complex-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
wasm-bindgen = "0.2"
spfunc = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true